--- a/views/pages/myForm.ejs
+++ b/views/pages/myForm.ejs
@@ -9,7 +9,11 @@
 
 <body>
     <!-- Create your text area form here -->
-    Text Area Form Goes Here
+    <form action='/myForm' method="post">
+        <textarea type='text' name='movies'></textarea>
+    <br>
+    <button type="submit" value="Send">Send</button>
+    </form>
 </body>
 
 </html>
