Added search functionality

--- a/views/pages/searchResult.ejs
+++ b/views/pages/searchResult.ejs
@@ -10,7 +10,9 @@
 
 <body>
   <!-- Your Code Goes Here -->
-
+  <h1> <%= movie %> </h1>
+  <p> <%= description %> </p>
+  <a href ='/'> Home Page </a>
 </body>
 
 </html>
